--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <nav class="align-content-around">
   <div class="sidebar-header">
-    <h4 class="text-center header">Simple Sidebar</h4>
+    <h4 class="text-center header">Pesunor S.A.</h4>
     <strong><i class="fas fa-grin-squint-tears"></i></strong>
   </div>
   <app-menu></app-menu>
